Resolves justcode issues #881 and #1098. Auto-links URLs in AaE responses and preserves paragraphs and line breaks in AaE responses. This was also done for public comments and questions as well.

--- a/public/stylesheets/aae.css
+++ b/public/stylesheets/aae.css
@@ -1481,7 +1481,6 @@ a.moreinfo:hover {color:#eee !important;background:#000;text-decoration:none;}
 .commentblock {margin-bottom:1em;padding:1em;}
 .commentblock.public {background:#edffee;border:solid 2px #b5ffba;}
 .commentblock.expert {border:2px solid #efcfb8;}
-.commentblock p {margin-bottom:0;}
 p.comment {padding:0;color:#000;font-family: "Georgia","Lucida Sans", "Lucida Grande", "Lucida Sans Unicode", Verdana, sans-serif;font-size:1.6em;margin:0 0 1em;}
 #closebutton {padding:1em .5em 1.5em;}
 
